--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
         <li>Lab01 Home page</li>
         <li>Lab02 Loading...</li>
     </ul>
+    <a
+href="http://validator.w3.org/check/referer"> <img
+src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+alt="html validator"/></a>
 </body>
 </html>
