--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>Lab02 Loading...</li>
     </ul>
     <a
-href="https://validator.w3.org/check/referer"> <img
+href="http://validator.w3.org/check/referer"> <img
 src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
 alt="html validator"/></a>
 </body>
