--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-</head>
-<body>
-    <img src="./assets/images/614622" alt="natty">
+    <style>
+      img {
+        width: 200px;
+        border-radius: 100px;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="assets/images/614622" alt="natty" />
     <h1>Natnael Teshome</h1>
     <ul>
-        <li>Lab01 Home page</li>
-        <li>Lab02 Loading...</li>
+      <li>Lab01 Home page</li>
+      <li>Lab02 Loading...</li>
     </ul>
-    <a
-href="http://validator.w3.org/check/referer"> <img
-src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-alt="html validator"/></a>
-</body>
+    <a href="http://validator.w3.org/check?uri=referer">
+      <img
+        src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+        alt="html validator"
+    /></a>
+  </body>
 </html>
-
+!
