--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
     <img src="assets/images/614622" alt="natty" />
     <h1>Natnael Teshome</h1>
     <ul>
-      <li>Lab01 Home page</li>
+      <li>Lab00 Home page</li>
+      <li>Lab01 Loading</li>
       <li>Lab02 Loading...</li>
+      <li>Lab03 Loading...</li>
+      <li>Lab04 Loading...</li>
+      <li>Lab05 Loading...</li>
+      <li>Lab06 Loading...</li>
+      <li>Lab07 Loading...</li>
+      <li>Lab08 Loading...</li>
+      <li>Lab09 Loading...</li>
     </ul>
-    <a href="http://validator.w3.org/check?uri=referer">
-      <img
-        src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-        alt="html validator"
-    /></a>
+
+    <footer>
+      <a href="http://validator.w3.nu/check?uri=referer">
+        <img
+          src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+          alt="html validator"
+      /></a>
+    </footer>
   </body>
 </html>
 !
