--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Natnael Teshome</h1>
     <ul>
       <li>Lab00 Home page</li>
-      <li>Lab01 Loading</li>
+      <li>Lab01 Loading...</li>
       <li>Lab02 Loading...</li>
       <li>Lab03 Loading...</li>
       <li>Lab04 Loading...</li>
@@ -29,7 +29,7 @@
     </ul>
 
     <footer>
-      <a href="http://validator.w3.nu/check?uri=referer">
+      <a href="http://validator.w3.nu/">
         <img
           src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
           alt="html validator"
@@ -37,4 +37,3 @@
     </footer>
   </body>
 </html>
-!
