--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </ul>
 
     <footer>
-      <a href="http://validator.w3.nu/">
+      <a href="http://validator.w3.org/nu/">
         <img
           src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
           alt="html validator"
