--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
     </ul>
 
     <footer>
-      <a href="http://validator.w3.org/nu/">
-        <img
-          src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-          alt="html validator"
+      <a
+        href="http://validator.w3.org/check?uri=referer"
+        onclick="this.href='http://validator.w3.org/check?uri=' + 
+   document.URL"
+        ><img
+          src="http://www.w3.org/Icons/valid-xhtml10"
+          alt="Valid XHTML 1.0!"
+          height="31"
+          width="88"
       /></a>
     </footer>
   </body>
