--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Natnael Teshome</h1>
     <ul>
       <li>Lab00 Home page</li>
-      <li>Lab01 Loading...</li>
+      <li><a href="about.html">About Me</a></li>
       <li>Lab02 Loading...</li>
       <li>Lab03 Loading...</li>
       <li>Lab04 Loading...</li>
