add pie and about me

--- a/about.html
+++ b/about.html
@@ -9,45 +9,113 @@
   </head>
   <body>
     <h1>Natnael Teshome</h1>
-    <p>My name is Natnael and am from Ethiopia I love watching football</p>
+    <p>
+      <span class="drop-cap">M</span>y name is Natnael, and I am from Ethiopia.
+      I enjoy watching <em>football</em> , playing football, and playing
+      <em>tennis</em>.
+    </p>
     <hr />
-    <h2>My Classes at MIU</h2>
-    <ul>
-      <li>FPP</li>
-      <li>MPP</li>
-      <li>WAP</li>
-    </ul>
-    <h2>My Favorite Movies</h2>
-    <ol>
-      <li>Ye Wendoch Guday</li>
-      <li>Friends</li>
-      <li>Jexi</li>
-    </ol>
+    <div>
+      <h2>My Classes at MIU</h2>
+      <ul>
+        <li>CS390 - Fundamental Programming Practices</li>
+        <li>CS401 - Modern Programming Practices</li>
+        <li>CS472 - Web Programming</li>
+        <li>CS544 - Enterprise Architecture</li>
+        <li>CS590 - Software Architecture</li>
+        <li>CS545 - Web Application Architecture</li>
+      </ul>
+    </div>
+
+    <div>
+      <h2>My Favorite Movies</h2>
+      <ol>
+        <li>
+          Black Panther
+          <a href="https://www.imdb.com/title/tt1825683/" target="_blank"
+            ><em>IMDB</em></a
+          >
+          <ul>
+            <li>
+              <p>
+                <strong>Director</strong> :
+                <a
+                  href="https://www.imdb.com/name/nm3363032/?ref_=tt_cl_dr_1"
+                  target="_blank"
+                  >Ryan Coogler</a
+                >
+              </p>
+            </li>
+            <li>
+              <p><strong>Genres</strong> : Action Adventure</p>
+            </li>
+            <li>
+              <p><strong>Taglines</strong> : Long live the King</p>
+            </li>
+          </ul>
+        </li>
+        <li>
+          The Notebook
+          <a
+            href="https://www.imdb.com/title/tt0332280/?ref_=nv_sr_srsg_0"
+            target="_blank"
+            ><em>IMDB</em></a
+          >
+        </li>
+        <li>
+          Jexi
+          <a href="https://www.imdb.com/title/tt9354944/?ref_=nv_sr_srsg_0"
+            ><em>IMDB</em></a
+          >
+        </li>
+      </ol>
+    </div>
 
     <div class="container">
       <h2>My Mood</h2>
       <div class="pics">
-        <img src="./assets/images/happy.jpg" alt="happy" />
-        <!-- <div class="desc">happy</div> -->
-        <img src="./assets//images/sad.jpg" alt="sad" />
+        <span
+          >Happy : <img src="./assets/images/happy.jpg" alt="happy" />
+        </span>
+
+        <span> Sad : <img src="./assets//images/sad.jpg" alt="sad" /> </span>
         <!-- <div class="desc">sad</div> -->
       </div>
-      <!-- <div class="pics">
-       
-      </div> -->
     </div>
 
     <div>
       <h2>Fun Facts About My Neighbors</h2>
       <ul>
         <li>I dont have Neighbors</li>
+        <li>I dont have Neighbors</li>
       </ul>
     </div>
-    <h2>My Favorite Movies</h2>
-    <ol reversed>
-      <li>Ye Wendoch Guday</li>
-      <li>Friends</li>
-      <li>Jexi</li>
-    </ol>
+
+    <div>
+      <h2>My Favorite Movies</h2>
+      <ol reversed>
+        <li>
+          Jexi
+          <a href="https://www.imdb.com/title/tt9354944/?ref_=nv_sr_srsg_0"
+            ><em>IMDB</em></a
+          >
+        </li>
+
+        <li>
+          The Notebook
+          <a
+            href="https://www.imdb.com/title/tt0332280/?ref_=nv_sr_srsg_0"
+            target="_blank"
+            ><em>IMDB</em></a
+          >
+        </li>
+        <li>
+          Black Panther
+          <a href="https://www.imdb.com/title/tt1825683/" target="_blank"
+            ><em>IMDB</em></a
+          >
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
