--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <img src="assets/images/614622" alt="natty" />
     <h1>Natnael Teshome</h1>
     <ul>
-      <li>Lab00 Home page</li>
-      <li><a href="about.html">About Me</a></li>
-      <li>Lab02 Loading...</li>
+      <li>Lab00 - Home page</li>
+      <li>Lab01 -<a href="about.html">About Me</a></li>
+      <li>Lab01 -<a href="/pie.html">Recipe</a></li>
       <li>Lab03 Loading...</li>
       <li>Lab04 Loading...</li>
       <li>Lab05 Loading...</li>
