--- a/pie.html
+++ b/pie.html
@@ -8,16 +8,24 @@
       content="width=
     , initial-scale=1.0"
     />
-    <link rel="stylesheet" href="/assets/css/recipe.css" />
+    <link rel="stylesheet" href="./assets/css/recipe.css" />
     <title>Document</title>
   </head>
   <body>
     <h2>Grandma's Lemon Meringue Pie</h2>
-    <img src="/assets/images/pie.jpg" alt="pie" />
-    <p>
+    <img src="./assets/images/pie.jpg" alt="pie" />
+
+    <pre>
+  One 9-inch pie
+  30 Min - Prep time
+  10 Min - Cook time
+  40 Min - Total
+  8 Servings
+    </pre>
+    <!-- <p>
       One 9-inch pie <br />30 Min - Prep time <br />10 Min - Cook time <br />40
       Min - Total <br />8 Servings
-    </p>
+    </p> -->
     <hr />
 
     <h4>INGREDIENTS</h4>
@@ -126,19 +134,24 @@
     <br />
     <a href="index.html">Home</a>
     <footer>
-      <p>
-        Copyright © 2012 Granny's Pies <br />A Granny's Pies Production
+      <pre>
+        Copyright &copy; 2012 Granny's Pies
+                 A Granny's Pies Production
+                        All rights reserved
+      </pre>
+      <!-- <p>
+        Copyright &copy; 2012 Granny's Pies <br />A Granny's Pies Production
         <br />All rights reserved
-      </p>
+      </p> -->
       <a href="http://validator.w3.org/check/referer"
         ><img
-          src="/assets/images/w3c-html.png"
+          src="./assets/images/w3c-html.png"
           alt="Valid HTML"
           height="31"
           width="88"
       /></a>
       <a href="http://jigsaw.w3.org/css-validator/check/referer">
-        <img src="/assets/images/w3c-css.png" alt="valid css"
+        <img src="./assets/images/w3c-css.png" alt="valid css"
       /></a>
     </footer>
   </body>
