--- a/about.html
+++ b/about.html
@@ -86,8 +86,8 @@
     <div>
       <h2>Fun Facts About My Neighbors</h2>
       <ul>
-        <li>I dont have Neighbors</li>
-        <li>I dont have Neighbors</li>
+        <li>Nahom compitative in games</li>
+        <li>Burak loves to ask questions</li>
       </ul>
     </div>
 
