--- a/about.html
+++ b/about.html
@@ -74,12 +74,12 @@
     <div class="container">
       <h2>My Mood</h2>
       <div class="pics">
-        <span
-          >Happy : <img src="./assets/images/happy.jpg" alt="happy" />
-        </span>
-
-        <span> Sad : <img src="./assets//images/sad.jpg" alt="sad" /> </span>
-        <!-- <div class="desc">sad</div> -->
+        <img src="./assets/images/happy.jpg" alt="happy" />
+        <div class="desc">Happy</div>
+      </div>
+      <div class="pics">
+        <img src="./assets//images/sad.jpg" alt="sad" />
+        <div class="desc">Sad</div>
       </div>
     </div>
 
