--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
       <li>Lab00 - Home page</li>
       <li>Lab01 -<a href="about.html">About Me</a></li>
-      <li>Lab01 -<a href="/pie.html">Recipe</a></li>
+      <li>Lab01 -<a href="./pie.html">Recipe</a></li>
       <li>Lab03 Loading...</li>
       <li>Lab04 Loading...</li>
       <li>Lab05 Loading...</li>
