--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <h1>Natnael Teshome</h1>
     <ul>
       <li>Lab00 - Home page</li>
-      <li>Lab01 -<a href="about.html">About Me</a></li>
+      <li>Lab01 -<a href="./about.html">About Me</a></li>
       <li>Lab01 -<a href="./pie.html">Recipe</a></li>
-      <li>Lab03 Loading...</li>
+      <li>Lab02 <a href="./tmnt.html">Movies</a></li>
       <li>Lab04 Loading...</li>
       <li>Lab05 Loading...</li>
       <li>Lab06 Loading...</li>
