signup and grade done

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <img src="assets/images/614622" alt="natty" />
     <h1>Natnael Teshome</h1>
     <ul>
-      <li>Lab00 - Home page</li>
-      <li>Lab01 -<a href="./about.html">About Me</a></li>
-      <li>Lab01 -<a href="./pie.html">Recipe</a></li>
-      <li>Lab02 <a href="./tmnt.html">Movies</a></li>
-      <li>Lab04 Loading...</li>
-      <li>Lab05 Loading...</li>
+      <li>Lab01 - Home page</li>
+      <li>Lab02 -<a href="./about.html">About Me</a></li>
+      <li>Lab02 -<a href="./pie.html">Recipe</a></li>
+      <li>Lab03 <a href="./tmnt.html">Movies</a></li>
+      <li>Lab04 <a href="./grades.html">Grades</a></li>
+      <li>Lab04 <a href="./signup.html">Signup</a></li>
       <li>Lab06 Loading...</li>
       <li>Lab07 Loading...</li>
       <li>Lab08 Loading...</li>
