--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <li>Lab03 <a href="./tmnt.html">Movies</a></li>
       <li>Lab04 <a href="./grades.html">Grades</a></li>
       <li>Lab04 <a href="./signup.html">Signup</a></li>
-      <li>Lab06 Loading...</li>
-      <li>Lab07 Loading...</li>
+      <li>Lab05 <a href="./tip-calculate.html">Tip Calculator</a></li>
+      <li>Lab05 Loading...</li>
       <li>Lab08 Loading...</li>
       <li>Lab09 Loading...</li>
     </ul>
