update index page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Lab04 <a href="./grades.html">Grades</a></li>
       <li>Lab04 <a href="./signup.html">Signup</a></li>
       <li>Lab05 <a href="./tip-calculate.html">Tip Calculator</a></li>
-      <li>Lab05 Loading...</li>
+      <li>Lab05 <a href="./task-list.html">Task List</a></li>
       <li>Lab08 Loading...</li>
       <li>Lab09 Loading...</li>
     </ul>
