--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
       <li>Lab01 - Home page</li>
       <li>Lab02 -<a href="./about.html">About Me</a></li>
       <li>Lab02 -<a href="./pie.html">Recipe</a></li>
-      <li>Lab03 <a href="./tmnt.html">Movies</a></li>
-      <li>Lab04 <a href="./grades.html">Grades</a></li>
-      <li>Lab04 <a href="./signup.html">Signup</a></li>
-      <li>Lab05 <a href="./tip-calculate.html">Tip Calculator</a></li>
-      <li>Lab05 <a href="./task-list.html">Task List</a></li>
-      <li>Lab08 Loading...</li>
+      <li>Lab03 -<a href="./tmnt.html">Movies</a></li>
+      <li>Lab04 -<a href="./grades.html">Grades</a></li>
+      <li>Lab04 -<a href="./signup.html">Signup</a></li>
+      <li>Lab05 -<a href="./tip-calculate.html">Tip Calculator</a></li>
+      <li>Lab05 -<a href="./task-list.html">Task List</a></li>
+      <li>Lab06 <a href="./decorator/decoratormytext.html">Decorator</a></li>
+      <li>
+        <a href="./JavascriptTimer-Exercises.txt">Javascript Timer-Exercises</a>
+      </li>
       <li>Lab09 Loading...</li>
     </ul>
 
