--- a/decorator/decoratormytext.html
+++ b/decorator/decoratormytext.html
@@ -14,7 +14,11 @@
     </div>
     <fieldset>
       <legend>Text</legend>
-      <textarea name="texts" id="texts" cols="30" rows="4"> </textarea>
+      <textarea name="texts" id="texts" cols="30" rows="4">
+ 
+        Sample 1
+        Sample 2
+      </textarea>
     </fieldset>
     <fieldset>
       <legend>Decoration</legend>
