--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
       <li>Lab05 -<a href="./task-list.html">Task List</a></li>
       <li>Lab06 <a href="./decorator/decoratormytext.html">Decorator</a></li>
       <li>
+        Lab06
         <a href="./JavascriptTimer-Exercises.txt">Javascript Timer-Exercises</a>
       </li>
-      <li>Lab09 Loading...</li>
+      <li>Lab07 <a href="./bank/index.html"></a> Bank Account</li>
     </ul>
 
     <footer>
