--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         Lab06
         <a href="./JavascriptTimer-Exercises.txt">Javascript Timer-Exercises</a>
       </li>
-      <li>Lab07 <a href="./bank/index.html"></a> Bank Account</li>
+      <li>Lab07 <a href="./bank/index.html">Bank Account</a></li>
     </ul>
 
     <footer>
