add jquery quiz

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <a href="./JavascriptTimer-Exercises.txt">Javascript Timer-Exercises</a>
       </li>
       <li>Lab07 <a href="./bank/index.html">Bank Account</a></li>
+      <li>Lab08 <a href="./jQuery/jQuery Quiz I.txt">jQuery Quiz 1</a></li>
     </ul>
 
     <footer>
