--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </li>
       <li>Lab07 <a href="./bank/index.html">Bank Account</a></li>
       <li>Lab08 <a href="./jQuery/jQuery Quiz I.txt">jQuery Quiz 1</a></li>
+      <li>Lab09 <a href="./ascii/ascii.html">ASCII Animation</a></li>
     </ul>
 
     <footer>
