--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li>Lab07 <a href="./bank/index.html">Bank Account</a></li>
       <li>Lab08 <a href="./jQuery/jQuery Quiz I.txt">jQuery Quiz 1</a></li>
       <li>Lab09 <a href="./ascii/ascii.html">ASCII Animation</a></li>
+      <li>Lab10 <a href="./jQuery Quiz II.txt">jQuery Quiz II</a></li>
     </ul>
 
     <footer>
@@ -46,5 +47,7 @@
           width="88"
       /></a>
     </footer>
+   
+ </body>
   </body>
 </html>
