--- a/ascii/ascii.html
+++ b/ascii/ascii.html
@@ -51,15 +51,12 @@
       </fieldset>
     </div>
     <footer>
-      <a
-        href="http://validator.w3.org/check?uri=referer"
-        onclick="this.href='http://validator.w3.org/check?uri=' + 
-   document.URL"
-        ><img
-          src="http://www.w3.org/Icons/valid-xhtml10"
-          alt="Valid XHTML 1.0!"
-          height="31"
-          width="88"
+      <a href="http://validator.w3.org/check/referer"
+        ><img src="./assets/images/movies/w3c-html.png" alt="Valid HTML5"
+      /></a>
+      <br />
+      <a href="http://jigsaw.w3.org/css-validator/check/referer"
+        ><img src="./assets/images/movies/w3c-css.png" alt="Valid CSS"
       /></a>
     </footer>
   </body>
