--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <li>Lab07 <a href="./bank/index.html">Bank Account</a></li>
       <li>Lab08 <a href="./jQuery/jQuery Quiz I.txt">jQuery Quiz 1</a></li>
       <li>Lab09 <a href="./ascii/ascii.html">ASCII Animation</a></li>
-      <li>Lab10 <a href="./jQuery Quiz II.txt">jQuery Quiz II</a></li>
+      <li>Lab09 <a href="./jQuery Quiz II.txt">jQuery Quiz II</a></li>
+      <li>Lab10 <a href="./jQuery Quiz III.txt">jQuery Quiz III</a></li>
     </ul>
 
     <footer>
