--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li>Lab08 <a href="./jQuery/jQuery Quiz I.txt">jQuery Quiz 1</a></li>
       <li>Lab09 <a href="./ascii/ascii.html">ASCII Animation</a></li>
       <li>Lab09 <a href="./jQuery Quiz II.txt">jQuery Quiz II</a></li>
+      <li>Lab10 <a href="./maze/maze.html">Maze</a></li>
       <li>Lab10 <a href="./jQuery Quiz III.txt">jQuery Quiz III</a></li>
     </ul>
 
