--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li>Lab09 <a href="./jQuery Quiz II.txt">jQuery Quiz II</a></li>
       <li>Lab10 <a href="./maze/maze.html">Maze</a></li>
       <li>Lab10 <a href="./jQuery Quiz III.txt">jQuery Quiz III</a></li>
+      <li>Lab10 <a href="./puzzle/fifteen.html">Puzzle Game</a></li>
     </ul>
 
     <footer>
