--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <li>Lab09 <a href="./jQuery Quiz II.txt">jQuery Quiz II</a></li>
       <li>Lab10 <a href="./maze/maze.html">Maze</a></li>
       <li>Lab10 <a href="./jQuery Quiz III.txt">jQuery Quiz III</a></li>
-      <li>Lab10 <a href="./puzzle/fifteen.html">Puzzle Game</a></li>
+      <li>Lab11 <a href="./puzzle/fifteen.html">Puzzle Game</a></li>
+      <li>Lab12 <a href="./nasa-apod/index.html">NASA APOD</a></li>
     </ul>
 
     <footer>
