--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <li>Lab10 <a href="./jQuery Quiz III.txt">jQuery Quiz III</a></li>
       <li>Lab11 <a href="./puzzle/fifteen.html">Puzzle Game</a></li>
       <li>Lab12 <a href="./nasa-apod/index.html">NASA APOD</a></li>
+      <li>Lab12 <a href="./nasa-apod/fetch.html">NASA APOD Fetch API</a></li>
     </ul>
 
     <footer>
